syntax = "proto3";

package com.gx.wisestone.ezwork.app.grpc;
import "AppCommon.proto";
import "WscoreCommon.proto";
option java_multiple_files = true;
option java_package = "com.gx.wisestone.work.app.grpc.employee";
option java_outer_classname = "AppEmployeeInterfaceService";

//其他关于公司申请接口在 AppStructure.proto
service AppEmployeeInterface {

    //解绑公司 注意：header添加sys_tenant_no，employee_id
    rpc cancelCompanyBind(CancelCompanyBindRequest) returns (CommonResponse) {}
    //我的企业
    rpc myCompany (MyCompanyRequest) returns (AppMyCompanyResponse) {}
    //撤销企业申请
    rpc cancelCompanyApply(CancelCompanyApplyRequest) returns (CommonResponse) {}

}

message CancelCompanyBindRequest {

}

message CancelCompanyApplyRequest {
    int64 apply_id = 1;//申请id  对于未同意的申请取id
}

message MyCompanyRequest {

}
message AppMyCompanyResponse {
    int32 code = 1;//返回码
    string msg = 2;//返回消息
    map<string,string> data = 3;
    repeated EmployeeInfo employeeInfo= 4;
}


message EmployeeInfo {
    int64 employee_id = 4;
    int64 department_id = 5;//判断department_id为空说明没有绑定部门，不能控制家居
    int64 company_structure_id = 6;
    string company_name = 7;
    string department_name = 8;
    int32 status = 9; //1=申请；2=通过；3=拒绝
    int64 apply_id = 10;//申请id，未同意的情况下使用
    string building_name = 11;//办公楼名字
    int64 create_time = 12;//申请时间
    string image_url = 16; //工牌
    int32 tenant_no = 17; //小区编号
    AppDepartmentInfo appDepartmentInfo = 18;
}

message AppDepartmentInfo {
    int64 structure_id = 2;
    string smart_home_sn = 3;  //智能家居sn
    int64 smart_home_id = 4;
    int32 home_arming = 5;  //布防1撤防2
    string image_key = 6;
    string image_url = 7;
    int64 create_time = 8;  //创建时间
    int64 modify_time = 9;  //修改时间
}